--- a/week1/pubspec.yaml
+++ b/week1/pubspec.yaml
@@ -39,6 +39,9 @@ dependencies:
   connectivity: ^3.0.6
   equatable: ^2.0.5
   dio: ^5.0.3
+  provider: ^6.0.4
+  cached_network_image: ^3.2.2
+  http: ^0.13.5
 
 dev_dependencies:
   flutter_test:
